[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/game/main_stats.gd" type="Script" id=1]
[ext_resource path="res://scenes/objects/ui/button.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/fonts/m5x7.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[node name="MainStats" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0.0352941, 0.396078, 0.415686, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 180.0
custom_constants/margin_top = 14
custom_constants/margin_bottom = 14

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_top = 14.0
margin_right = 320.0
margin_bottom = 166.0

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 27.0
margin_right = 292.0
margin_bottom = 64.0
size_flags_horizontal = 6
custom_constants/hseparation = 20
columns = 4

[node name="Label9" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_right = 92.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "characters saved:"

[node name="Saved" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 112.0
margin_right = 118.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 138.0
margin_right = 239.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "characters lost:"

[node name="Lost" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 259.0
margin_right = 265.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 17.0
margin_right = 92.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "bird food:"

[node name="BirdFood" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 17.0
margin_right = 118.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 138.0
margin_top = 17.0
margin_right = 239.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "powerups collected:"

[node name="Powerups" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 259.0
margin_top = 17.0
margin_right = 265.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 34.0
margin_right = 92.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "hazards hit:"

[node name="Hazards" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 34.0
margin_right = 118.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label5" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 138.0
margin_top = 34.0
margin_right = 239.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "health taken:"

[node name="Health" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 259.0
margin_top = 34.0
margin_right = 265.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label6" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_top = 51.0
margin_right = 92.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "level ups:"

[node name="Levelups" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 112.0
margin_top = 51.0
margin_right = 118.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Label7" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 138.0
margin_top = 51.0
margin_right = 239.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "level downs:"

[node name="Leveldowns" type="Label" parent="MarginContainer/VBoxContainer/GridContainer"]
margin_left = 259.0
margin_top = 51.0
margin_right = 265.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 320.0
margin_bottom = 152.0
size_flags_vertical = 10

[node name="Results" type="RichTextLabel" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 20.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]You [color=yellow]{var}[/color], Grade: [color=yellow]{var}[/color][/center]"
text = "You {var}, Grade: {var}"
fit_content_height = true
scroll_active = false

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_left = 77.0
margin_top = 24.0
margin_right = 243.0
margin_bottom = 56.0
size_flags_horizontal = 6
custom_constants/separation = 38

[node name="Menu" parent="MarginContainer/VBoxContainer/VBoxContainer/Buttons" instance=ExtResource( 2 )]
_text = "TO MENU"

[node name="Restart" parent="MarginContainer/VBoxContainer/VBoxContainer/Buttons" instance=ExtResource( 2 )]
margin_left = 102.0
margin_right = 166.0
_text = "RESTART"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Buttons/Restart" to="." method="_on_restart_pressed"]
